--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,28 @@
-.App {
+.bg {
+  background-image: url(./img/bg.jpg);
+  background-attachment: fixed;
+  /* min-height: 100vh; */
+  width: 100%;
+  height: 5000px;
+}
+
+.web {
+  width: 100%;
+  /* height: 100%; */
+  background-image: url(./img/bg.jpg);
+  background-attachment: fixed;
+  /* min-height: 100vh; */
+  /* background-image: url(./img/bg.jpg);
+  background-attachment: contain; */
+}
+
+.ant-back-top-inner {
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 4px;
+  background-color: #1088e9;
+  color: #fff;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 20px;
 }
